# maybe

./: pyproject.toml
.github/workflows/: ci.yml
src/maybe/: __init__.py  maybe.py
tests/: test_maybe.py  test_pattern_matching.py
